@@ -2,6 +2,12 @@ v7.3.0 (---):
 ::internal changes:
 - modularize common.sh
 
+::downloader changes:
+- changed download links to Mediafire so that they can automatically be
+  downloaded using wget, this makes Cliff Super Mario Bros., Ghostly Super
+  Mario Boos Wii, MLG Super Mario Bros. Wii, Pokemon Neo X, Pokemon Neo Y
+  and Pokemon Red Ruby auto-downloadable
+
 ::misc. changes:
 - update Cliff Super Mario Bros. to version 1.0.5
 
